--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Course Overview
-subtitle: Writing, Images, and Knowledge Production in Colonial Latin America
+title: Writing, Material Culture, and Knowledge Production in Colonial Latin America
+subtitle:
 email: f_good@ucsb.edu
 description: This is a website that I am designing to accompany the syllabus that I have to create as part of my PhD minor qualifying exams.
 author:  Felicity Good
