--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: Writing, Material Culture, and Knowledge Production in Colonial Latin America
+subtitle:
 email: f_good@ucsb.edu
-author:  Felicity Good
+description:
+author:  Felicity Backenstose Good
 baseurl: "" # Leave this alone if this is your main site (i.e. username.github.io). If instead this is a site for a project, e.g. username.github.io/
 url: "http://febgood109.github.io" # or http://username.github.io/mycleverproject if it is a project site, or http://mylovelydomainname.com if you have a domain, and so on.
 background: "img/posts/Mexicanus2.jpg"
